package tutorial;
option java_package = "com.example.tutorial";//生成的源文件包名，不能有中文
option java_outer_classname = "AddressBookProtos";
message Person {
	required string name = 1;
	required int32 id = 2;
	optional string email = 3;
	enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
}
message PhoneNumber {
	required string number = 1;
	optional PhoneType type = 2 [default = HOME];
}
repeated PhoneNumber phone = 4;
}
message AddressBook {
	repeated Person person = 1;
}